# bilibili-music

./: .gitignore  README.md  components.d.ts  package.json  pnpm-lock.yaml  tsconfig.json  tsconfig.node.json  vite.config.ts
backend/: Cargo.toml  makefile
backend/src/: lib.rs
src/: App.vue  data.ts  env.d.ts  main.ts  style.css  vite-env.d.ts
src/components/: btn.vue
src/steps/: audio.vue  clip.vue  cover.vue  info.vue  lyrics.vue  montage.vue
src/types/: audioToBlob.d.ts  music.d.ts  player.d.ts  videoData.d.ts  videoParse.d.ts
src/utils/: deepmerge.ts  drop.ts  gpt.ts  requests.ts
