[package]
edition = "2021"
name = "bilibili-music-backend"
version = "0.1.0"

[lib]
crate-type = ["cdylib"]

[dependencies]
console_error_panic_hook = "0.1.7"
id3 = "1.13.1"
serde = {version = "1.0.203", features = ["derive"]}
serde-wasm-bindgen = "0.6.5"
wasm-bindgen = {version = "0.2.92"}

[dev-dependencies]
wasm-bindgen-test = "0.3.42"
